--- a/src/main/resources/templates/tpl/ajax_list.html
+++ b/src/main/resources/templates/tpl/ajax_list.html
@@ -29,12 +29,6 @@
                 display: block;
             }
         }
-
-        @media screen and (min-width: 576px) {
-            .form-inline .form-group {
-                margin: 0 .5rem .5rem 0;
-            }
-        }
     </style>
 </head>
 <body class="app">
@@ -201,10 +195,11 @@
         }
 
         let report_id =/*[[${report.id} + '']]*/
+        let pageable = /*[[${report.pageable}]]*/
 
         function listRequest(params) {
             console.log('list ajax request...')
-            params.page = 1
+            params.size = pageable ? 15 : -1 // 不分页
             params.sord = /*[[${report.sord}]]*/
             params.sidx = /*[[${report.sidx}]]*/
 
