--- a/src/main/resources/templates/demos/dialogInput.html
+++ b/src/main/resources/templates/demos/dialogInput.html
@@ -116,8 +116,8 @@
                 <iframe id="iframe" name="iframe" src="" width="100%" style="border: 0; padding: 0; margin: 0; height: calc(100% - 6px);"></iframe>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-primary ok-show" id="okId">确定</button>
-                <button class="btn btn-secondary" type="button" data-dismiss="modal">关闭</button>
+                <button class="btn btn-primary ok-show" id="okId"><i class="fa fa-cog"></i> 确定</button>
+                <button class="btn btn-secondary" type="button" data-dismiss="modal"><i class="fa fa-remove"></i> 关闭</button>
             </div>
         </div>
     </div>
