--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -172,8 +172,8 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-primary">保存</button>
-                <button class="btn btn-secondary" type="button" data-dismiss="modal">关闭</button>
+                <button class="btn btn-primary"><i class="fa fa-save"></i> 保存</button>
+                <button class="btn btn-secondary" type="button" data-dismiss="modal"><i class="fa fa-remove"></i> 关闭</button>
             </div>
             </form>
         </div>
