--- a/src/main/resources/templates/modules/material.html
+++ b/src/main/resources/templates/modules/material.html
@@ -112,7 +112,7 @@
                                     <td th:each="col: ${row}">
                                         <input type="text" class="form-control" th:value="${col}">
                                     </td>
-                                    <td class="operator">x</td>
+                                    <td class="operator btn-link">X</td>
                                 </tr>
                                 </tbody>
                             </table>
