--- a/src/main/resources/templates/tpl/ajax_list.html
+++ b/src/main/resources/templates/tpl/ajax_list.html
@@ -65,7 +65,7 @@
                         <a class="btn btn-secondary mr-2" id="exportBtn" th:attr="data-url=${'/reports/' + id + '/export'}" sec:authorize="${hasAuthority(#vars.report.code + '_read')}">
                             <i class="fa fa-upload"></i> 导出</a>
                         <button class="btn btn-primary" type="button" onclick="showDialog('新增')" sec:authorize="${hasAuthority(#vars.report.code + '_add')}">
-                            <i class="fa fa-save"></i> 新增</button>
+                            <i class="fa fa-plus"></i> 新增</button>
                     </div>
                 </form>
             </div>
@@ -112,8 +112,8 @@
                             <div class="modal-body">
                             </div>
                             <div class="modal-footer">
-                                <button class="btn btn-primary ok-show" id="okId">保存</button>
-                                <button class="btn btn-secondary" type="button" data-dismiss="modal">关闭</button>
+                                <button class="btn btn-primary ok-show" id="okId"><i class="fa fa-save"></i> 保存</button>
+                                <button class="btn btn-secondary" type="button" data-dismiss="modal"><i class="fa fa-remove"></i> 关闭</button>
                             </div>
                         </div>
                     </div>
