--- a/src/main/resources/templates/tpl/query_list.html
+++ b/src/main/resources/templates/tpl/query_list.html
@@ -40,6 +40,7 @@
 
         table tr.active {
             background: #20a8d8!important;
+            color: #fff;
         }
     </style>
 </head>
