chore: 添加分类的path的字典

--- a/src/main/resources/templates/modules/inventory/index.html
+++ b/src/main/resources/templates/modules/inventory/index.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="form-group">
                         <label class="col-form-label mr-2">操作人</label>
-                        <sp:dict id="operatorId" name="operatorId" key="sys_user" class="form-control" emptyItemText/>
+                        <sp:dict id="operatorId" name="operatorId" key="sys_user" class="form-control" emptyItemText th:value="${session.user.id}"/>
                     </div>
                     <div class="form-group">
                         <label class="col-form-label mr-2">备注</label>
