--- a/src/main/resources/templates/includes/base.html
+++ b/src/main/resources/templates/includes/base.html
@@ -111,6 +111,7 @@
         .table-fixed-container .table-thead {
             position: absolute;
             background-color: #fff;
+            z-index: 9;
         }
 
         /*.table-body-fixed .table-head-container::-webkit-scrollbar {*/
@@ -286,6 +287,16 @@
         @media screen and (min-width: 576px) {
             .form-inline .form-group {
                 margin: 0 .5rem .5rem 0;
+            }
+
+            .card-body-scroll-panel {
+                max-height: calc(100vh - 240px);
+            }
+        }
+
+        @media screen and (max-width: 576px) {
+            .form-inline {
+                display: block;
             }
         }
 
