--- a/src/main/resources/templates/includes/base.html
+++ b/src/main/resources/templates/includes/base.html
@@ -367,7 +367,24 @@
                 },
                 error: function (xhr, status, error) {
                     if (xhr.status === 400) {
-                        toastr.error('请求出现错误');
+                        let message = '请求出现错误!'
+                        let json = xhr.responseJSON
+
+                        if (json.message) {
+                            message += json.message
+                        }
+
+                        if (json.data) {
+                            if (Array.isArray(json.data)) {
+                                for (let row of json.data) {
+                                    message += "<br> * " + row.message
+                                }
+                            } else {
+                                message += "<br> * " + json.data
+                            }
+                        }
+
+                        toastr.error(message);
                     } else if (xhr.status === 403) {
                         toastr.warning('您没有操作权限！');
                     } else if (xhr.status === 404) {
@@ -542,7 +559,41 @@
             }
         }
 
+        function formatDecimal(num) {
+            if (typeof num === 'undefined' || num === null)
+                return ''
+
+            var result = parseFloat(num);
+            if (isNaN(result)) {
+                alert('传递参数错误，请检查！');
+                return false;
+            }
+            result = Math.round(num * 100) / 100;
+            var s_x = result.toString();
+            var pos_decimal = s_x.indexOf('.');
+            if (pos_decimal < 0) {
+                pos_decimal = s_x.length;
+                s_x += '.';
+            }
+            while (s_x.length <= pos_decimal + 2) {
+                s_x += '0';
+            }
+            return formatNumber(s_x);
+        }
+
         function formatInteger(num) {
+            if (typeof num === 'undefined' || num === null)
+                return ''
+
+            return formatNumber(Math.round(num));
+        }
+
+        /**
+         * 整数部分，3位逗号隔开
+         * @param num
+         * @returns {string}
+         */
+        function formatNumber(num) {
             if (typeof num === 'undefined' || num === null)
                 return ''
 
@@ -574,6 +625,7 @@
         }
 
         Vue.filter('formatInteger', formatInteger)
+        Vue.filter('formatDecimal', formatDecimal)
         Vue.filter('openDetailLink', openDetailLink)
 
         // https://css-tricks.com/snippets/jquery/make-jquery-contains-case-insensitive/
