fix： summary support

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -212,10 +212,17 @@
             //     allowClose: false
             // });
 
+            // nthTabs.addTab({
+            //     id: "inventory_move",
+            //     title: '库存移动',
+            //     url: "/inventory/move",
+            //     allowClose: false
+            // });
+
             nthTabs.addTab({
-                id: "inventory_move",
-                title: '库存移动',
-                url: "/inventory/move",
+                id: "mm_material",
+                title: '物料',
+                url: "/reports/695981455636959232",
                 allowClose: false
             });
         })
