--- a/src/main/resources/templates/tpl/ajax_list.html
+++ b/src/main/resources/templates/tpl/ajax_list.html
@@ -83,7 +83,7 @@
                                 {{openDetailLink('查看', scope.row.id, scope.row.<th:block th:text="${n.name}"></th:block>)}}
                             </template>
                         </table-column>
-                        <table-column label="操作" align="center" th:if="${report.extraData != null}">
+                        <table-column label="操作" align="center" th:if="${report.extraData != null}" sec:authorize="${hasAuthority(#vars.report.code + '_delete') or hasAuthority(#vars.report.code + '_delete')}">
                             <template slot-scope="scope">
                                 {{ openDetailLink('编辑', scope.row.id, '编辑') }}
                                 {{ deleteLink(scope.row.id) }}
@@ -130,6 +130,7 @@
     <script type="text/javascript" th:src="@{/js/table/jquery.exportTable.js}"></script>
     <script th:src="@{/editable-table/editable-table.js}"></script>
     <script th:src="@{/ajaxfileupload.js}"></script>
+    <script th:src="@{/plugins/lodash.min.js}"></script>
 
     <script th:inline="javascript">
         $.fn.multipleSelect.locales['zh-CN'] = {
@@ -196,9 +197,10 @@
             params.sidx = /*[[${report.sidx}]]*/
 
             if (!$listTable) {
-                $listTable = $('#report-list').ajaxTable({
+                var options = {
                     url: '/reports/'+report_id+'/json',
                     query: params,
+                    summaryIndex: /*[[${summaryIndex}]]*/ ,
                     displayPage: function () {
                         if(/*[[${device.isNormal()}]]*/) {
                             return 15
@@ -207,7 +209,13 @@
                         }
                         return 5
                     }
-                })
+                }
+
+                if (options.summaryIndex.length > 0) {
+                    options['count'] = '/reports/'+report_id+'/json/count'
+                }
+
+                $listTable = $('#report-list').ajaxTable(options)
             } else {
                 $listTable.ajaxTable('reload', params)
             }
