--- a/src/main/resources/templates/tpl/ajax_list.html
+++ b/src/main/resources/templates/tpl/ajax_list.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" th:href="@{/css/tab-common.css}">
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-datepicker/css/bootstrap-datepicker.min.css}">
     <link rel="stylesheet" th:href="@{/plugins/multiple-select/multiple-select.min.css}">
-    <style>
+    <style th:inline="css">
         .ms-parent {
             padding: 0;
         }
@@ -17,6 +17,8 @@
             height: 33px;
             line-height: 33px;
         }
+
+        /*[(${(report.additionalInfo != null && report.additionalInfo['css'] != null ) ? report.additionalInfo['css'] : ''})]*/
 
     </style>
 </head>
@@ -83,7 +85,7 @@
                                 {{openDetailLink('查看', scope.row.id, scope.row.<th:block th:text="${n.name}"></th:block>)}}
                             </template>
                         </table-column>
-                        <table-column label="操作" align="center" th:if="${report.extraData != null}" sec:authorize="${hasAuthority(#vars.report.code + '_delete') or hasAuthority(#vars.report.code + '_delete')}">
+                        <table-column label="操作" align="center" th:if="${report.additionalInfo != null && report.additionalInfo['formId'] != null}" sec:authorize="${hasAuthority(#vars.report.code + '_delete') or hasAuthority(#vars.report.code + '_delete')}">
                             <template slot-scope="scope">
                                 {{ openDetailLink('编辑', scope.row.id, '编辑') }}
                                 {{ deleteLink(scope.row.id) }}
@@ -234,7 +236,7 @@
 
         let $modal = $('#dialog')
 
-        let form_id =/*[[${report.extraData} + '']]*/
+        let form_id =/*[[${report.additionalInfo['formId']} + '']]*/
 
         function showDialog(title, id) {
             $('#dialog-title').text(title)
@@ -274,6 +276,7 @@
                 });
             }
         }
+        /*[(${(report.additionalInfo != null && report.additionalInfo['js'] != null ) ? report.additionalInfo['js'] : ''})]*/
     </script>
 </th:block>
 </body>
